[gd_scene load_steps=11 format=3 uid="uid://w8wuwprny2ju"]

[ext_resource type="Script" path="res://entities/scripts/NPC.gd" id="1_ag2ep"]
[ext_resource type="PackedScene" uid="uid://b4px6iojpgrem" path="res://systems/interaction/Interactable.tscn" id="2_tdryi"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pq1pj"]
radius = 0.166727
height = 0.67796

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d3vo3"]
albedo_color = Color(0.866667, 0, 0.0705882, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2887j"]
material = SubResource("StandardMaterial3D_d3vo3")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sei3x"]
albedo_color = Color(0.639216, 0.639216, 0.639216, 0.733333)

[sub_resource type="BoxMesh" id="BoxMesh_1j3gf"]
material = SubResource("StandardMaterial3D_sei3x")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_36c6x"]
albedo_color = Color(0.866667, 0, 0.0705882, 1)

[sub_resource type="BoxMesh" id="BoxMesh_mk76l"]
material = SubResource("StandardMaterial3D_36c6x")
size = Vector3(1.25, 1, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xmf76"]
height = 2.03112

[node name="NPC" type="CharacterBody3D"]
script = ExtResource("1_ag2ep")

[node name="Interactable" parent="." instance=ExtResource("2_tdryi")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 1.12912, 0)

[node name="CollisionShape3D" parent="Interactable" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0370762, 0)
shape = SubResource("CapsuleShape3D_pq1pj")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01549, 0)
mesh = SubResource("CapsuleMesh_2887j")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.496617, 0.337102)
mesh = SubResource("BoxMesh_1j3gf")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.224828, -0.357866)
mesh = SubResource("BoxMesh_mk76l")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00699, 0)
shape = SubResource("CapsuleShape3D_xmf76")

[connection signal="focused" from="Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Interactable" to="." method="_on_interactable_unfocused"]

[editable path="Interactable"]
